tests/invalid/test_27_no_func_type.hd
// test 27 : no function type
// Parser / Lexer Valid: Yes

main() {}